@@ -1,3 +1,12 @@
+2008-12-15  Matevz Tadel  <matevz.tadel@ijs.si>
+
+	* Gled/Gled.h:
+	* GledView/GledGUI.cxx:
+	* GledView/GledGUI.h:
+	Remove locking of ROOT display in NewCanvas() - call constructor
+	via interpreter instead. Might require one more iteration, to call
+	via TTimer.
+
 2008-12-14  Matevz Tadel  <matevz.tadel@ijs.si>
 
 	* lib-exec:
